--- a/projects.json
+++ b/projects.json
@@ -7,7 +7,7 @@
             "repo": "https://github.com/czhxxhgsrb-hub/<repo>"
         },
         {
-            "title": "Lommeregner",
+            "title": "Lommeregner (16/12/25)",
             "description": "Semi-funktionel lommeregner",
             "live": "./projects/lommeregner/",
             "repo": "https://github.com/czhxxhgsrb-hub/<repo>"
